@@ -18,3 +18,8 @@ schemas/desktop_gnome_font_rendering.schemas.in
 shell/gnomecc.desktop.in
 vfs-methods/fontilus/gnome-font-viewer.desktop.in
 vfs-methods/themus/themus-theme-applier.desktop.in
+capplets/localization/localization.desktop.in.in
+capplets/localization/localization.glade
+schemas/apps_gnome_settings_daemon_default_editor.schemas.in
+schemas/apps_gnome_settings_daemon_keybindings.schemas.in
+schemas/apps_gnome_settings_daemon_screensaver.schemas.in
