@@ -1,3 +1,9 @@
+2008-01-29  Sebastien Bacher  <seb128@ubuntu.com>
+
+	* POTFILES.in:
+	* POTFILES.skip:
+	don't translate sources which are not distributed
+
 2008-01-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
